--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,9 @@
 <div class="banner"></div>
 <div class="item"></div>
 <img src="./images/01.jpeg" alt="" style="width: 100px;">
+<span class="iconfont .icon-icon-test">webpack</span>
+<span class="iconfont .icon-icon-test2">webpack</span>
+<span class="iconfont .icon-icon-test1">webpack</span>
+<span class="iconfont .icon-icon-test3">webpack</span>
 </body>
 </html>
